--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,16 +3,17 @@
 	<head>
 		<title>Weather</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- Bootstrap -->
-		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<!--		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-
-		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]> -->
-<!--		  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>-->
-<!--		  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>-->
-<!--		<![endif]-->
+		<link href="/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+		<style>
+			figure {
+				width: 15%; /* Ширина */
+				float: left; /* Выстраиваем элементы по горизонтали */
+				margin: 0 0 1% 1%; /* Отступ слева */
+				background: #f0f0f0; /* Цвет фона */
+				border-radius: 5px; /* Радиус скругления */
+				padding: 1%; /* Поля */
+			}
+		</style>
 	</head>
 	<body>
 		<div class="container">
@@ -30,13 +31,7 @@
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
-						<li><a href="/sinoptic">Sinoptic</a></li>
-						<li><a href="/meteo_gov_ua">MeteoGovUa</a></li>
-						<li><a href="/gismeteo">Gismeteo</a></li>
 			      <li><a href="/info">Info</a></li>
-						<li><a href="/table">Table</a></li>
-<!--			      <li><a href="/something">Something</a></li>-->
-<!--			      <li><a href="/contacts">Contacts</a></li>-->
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
@@ -50,13 +45,7 @@
 
 	</div>
 
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="/vendor/jquery-1.9.1.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="/vendor/jquery-1.9.1.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
-<!--		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>-->
-<!--		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>-->
   </body>
 </html>
