--- a/views/sinoptic.erb
+++ b/views/sinoptic.erb
@@ -1,64 +1,84 @@
-<%= "
+<!--<pre><%#= "#{@one_day}" %></pre>-->
+<!--<pre><%#= "#{@week}" %></pre>-->
+<!--ДЕНЬ-->
+<% cache_status_day = @cache_status_day || 'no data'%>
+<% cache_status_week = @cache_status_week || 'no data'%>
+<!--<%#= "кэш-1 " + cache_status_day %><br>-->
+<!--<%#= "кэш-2 " + cache_status_week %><br>-->
+
+<% today_date = @one_day[0] %>
+<% today = @one_day[1] %>
+
+<% table_description =
+       [ '',
+        'время',
+        'небо',
+        'температура ',
+        'ощущается как',
+        'давление, мм',
+        'влажность, %',
+        'скорость ветра, м/с',
+        'вероятность осадков, %'
+       ] %>
+<% table_description[0] = I18n.localize(today_date, :format => '%A %e %B')  %>
+
+
 <table class='table table-bordered'>
   <thead>
   <tr>
-    <th scope='col'>День</th>
-    <th scope='col'>Число</th>
-    <th scope='col'>Месяц</th>
+    <th><%= "#{table_description[0]}" %></th><!--в эьой ячейке текущаяя дата-->
+    <% today[0].each do |i| %>
+    <th scope='col' colspan="2" ><%= "#{i}" %></th><!--колонки двойной ширины-->
+    <% end %>
+  </tr>
+  </thead>
+
+  <!--  day_time, time_slot, sky_ico, temp_fact, temp_feel, pressure, humiditi, wind, veroyatnost, sky_description-->
+  <!--  i это строки, j это колонки. В строке неба используется 9-й массив-->
+  <tbody>
+  <% for i in 1...today.count-1 do  %>
+    <tr>
+      <td><%= "#{table_description[i]}" %></td>
+      <% for j in 0...today[i].count do%>
+        <td>
+        <% if i == 2 %>
+            <%= "
+            <img src=\"//sinst.fwdcdn.com/img/weatherImg/s/#{today[i][j]}.gif\" alt='' title='#{today[9][j]}'>
+            <br>
+            <span>#{today[9][j]}</span>
+            " %>
+
+        <% else %>
+        <%= "#{today[i][j]}" %>
+        <% end %>
+        </td>
+      <% end %>
+    </tr>
+
+ <% end %>
+  </tbody>
+</table>
+
+<!--НЕДЕЛЯ-->
+<table class='table table-bordered'>
+  <thead>
+  <tr>
+    <th scope='col'>Дата</th>
     <th scope='col'>min</th>
     <th scope='col'>max</th>
+    <th scope='col'>Осадки</th>
+    <th scope='col'>Небо</th>
   </tr>
   </thead>
   <tbody>
+  <% for i in 0...@week.count do  %>
   <tr>
-    <td>#{sinoptic.days[0]}</td>
-    <td>#{sinoptic.days[1]}</td>
-    <td>#{sinoptic.days[2]}</td>
-    <td>#{sinoptic.temp[0]}</td>
-    <td>#{sinoptic.temp[1]}</td>
+    <td><%= "#{ I18n.localize(@week[i][:date], :format => '%A %e %B') }" %></td>
+    <td><%= "#{@week[i][:temp][:min]}" %></td>
+    <td><%= "#{@week[i][:temp][:max]}" %></td>
+    <td><%= "<img src=\"#{@week[i][:img_link]}\" >" %></td>
+    <td><%= "#{@week[i][:sky]}" %></td>
   </tr>
-  <tr>
-    <td>#{sinoptic.days[3]}</td>
-    <td>#{sinoptic.days[4]}</td>
-    <td>#{sinoptic.days[5]}</td>
-    <td>#{sinoptic.temp[2]}</td>
-    <td>#{sinoptic.temp[3]}</td>
-  </tr>
-  <tr>
-    <td>#{sinoptic.days[6]}</td>
-    <td>#{sinoptic.days[7]}</td>
-    <td>#{sinoptic.days[8]}</td>
-    <td>#{sinoptic.temp[4]}</td>
-    <td>#{sinoptic.temp[5]}</td>
-  </tr>
-  <tr>
-    <td>#{sinoptic.days[9]}</td>
-    <td>#{sinoptic.days[10]}</td>
-    <td>#{sinoptic.days[11]}</td>
-    <td>#{sinoptic.temp[6]}</td>
-    <td>#{sinoptic.temp[7]}</td>
-  </tr>
-  <tr>
-    <td>#{sinoptic.days[12]}</td>
-    <td>#{sinoptic.days[13]}</td>
-    <td>#{sinoptic.days[14]}</td>
-    <td>#{sinoptic.temp[8]}</td>
-    <td>#{sinoptic.temp[9]}</td>
-  </tr>
-  <tr>
-    <td>#{sinoptic.days[15]}</td>
-    <td>#{sinoptic.days[16]}</td>
-    <td>#{sinoptic.days[17]}</td>
-    <td>#{sinoptic.temp[10]}</td>
-    <td>#{sinoptic.temp[11]}</td>
-  </tr>
-  <tr>
-    <td>#{sinoptic.days[18]}</td>
-    <td>#{sinoptic.days[19]}</td>
-    <td>#{sinoptic.days[20]}</td>
-    <td>#{sinoptic.temp[12]}</td>
-    <td>#{sinoptic.temp[13]}</td>
-  </tr>
+  <% end %>
   </tbody>
   </table>
-" %>
